--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,7 +56,7 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\cargo.cs" />
+    <Compile Include="Assets\Game\Scripts\CarController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
